--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,9 @@
     <h1>{{ page.title }}</h1>
     {% endif %}
 
-    <p style="color: red;">DEBUG: Prefix used: {{ unique_id_prefix }}</p>
+    <p style="color: red; font-size: 0.9rem;">
+    DEBUG CHECK: Date={{ page.date | date: "%Y-%m-%d" }} | Slug={{ page.slug }}
+</p>
 
     {% if page.subtitle %}
     <div style="font-style: italic; color: #555; border-bottom: 1px solid #e0e0e0; padding-bottom: 20px; margin-bottom: 40px;">
