--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,11 @@
     <h1>{{ page.title }}</h1>
     {% endif %}
 
-    <!-- DEBUG: Show all post.basename values -->
-<ul style="font-family: monospace; font-size: 0.8rem; color: #333;">
+<ul style="font-family: monospace; font-size: 0.9rem;">
 {% for post in site.posts %}
-    <li>{{ post.basename }}</li>
+  <li>
+    RAW OBJECT: {{ post | inspect }}
+  </li>
 {% endfor %}
 </ul>
 
