--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,6 +63,13 @@ layout: default
         {{ content }}
     </div>
 
+    <div style="background: red; color: white; padding: 10px;">
+  DEBUG: The Post Layout is loading.
+  <br>
+  Current Slug: {{ page.slug }}
+</div>
+
+
     <hr class="fencing-divider" style="margin: 3rem 0; border: 0; border-top: 1px solid #eee;">
 
     {% include version_links.html %}
